--- a/index.html
+++ b/index.html
@@ -1,264 +1,18 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html>
 
 <head>
   <meta charset="utf-8">
-  <title>Freddy site</title>
-  <style>
-  body {
-    background-color:
-  }
-
-  hr {
-    background-color:#9896;
-    border-style: none;
-    height: 2px;
-  }
-</style>
-
+  <title>Bacon Fansite</title>
+  <link rel="stylesheet" href="css/stylesnew.css">
 </head>
 
 <body>
-
-  <table cellspacing="20">
-    <tr>
-      <td><img src="Images\ifeanyi.png" alt=" Ifeanyi CV profile picture"></td>
-      <td>
-        <h1>Nnah Ifeanyi Alfred, MRM</h1>
-        <p><em><strong>Analysis | Finance | Management | ERM | Power BI | Leadership | Dashboard Builder | KPI Tracker | Developer</strong></em></p>
-        <p><em> Data Analyst of <strong> <a href="https://www.ikejaelectric.com/about-ikeja-electric/
-        ">Ikeja Electric</a></strong></em></p>
-      </td>
-
-  </table>
-  <hr>
-  <p>Experienced Data Analyst with a demonstrated history of working in the utility industry. Skilled in Enterprise Risk Management, Analysis, Business Planning, Strategic Management, Leadership. Strong information technology professional with a
-    Masters Risk Management focused in Actuarial Science from the University of Lagos.</p>
-  <hr>
-
-  <h3><strong>Experience</strong></h3>
-  <h4>Ikeja Electric</h4>
-  <h4><em><strong>Compliance Data Analyst</strong></em></h4>
-  <h4>May 2018 - Present (4 years 10 months) Lagos, Nigeria </h4>
-  <ul>
-    <p>
-      <li> Confirm that only customers who have made full payment are metered and fully set up on the database on daily basis.
-    </p>
-    </li>
-    <p>
-      <li> Drive compliance with the company's accepted standard and verify that all requirements are duly followed on daily basis.
-    </p>
-    </li>
-    <p>
-      <li> Drive project contractor with quality and industry regulatory requirements daily.
-    </p>
-    </li>
-    <p>
-      <li> Perform periodic trend analysis for unit/departmental, management and projects performance metrics on monthly basis.
-    </p>
-    </li>
-    <p>
-      <li> Monitor all phases of business projects such as managing requirements and performing analyses on daily basis.
-    </p>
-    </li>
-    <p>
-      <li> Coordinate and collect data from the metric owners, staff or departments and business unit on monthly basis.
-    </p>
-    </li>
-    <p>
-      <li> Develop Power BI dashboards based on business requirements on weekly basis.
-    </p>
-    </li>
-    <p>
-      <li> Conduct assessment of metering contractor’s installation on quality deliverables on daily basis.
-    </p>
-    </li>
-    <p>
-      <li> Prepare and deliver business requirements reviews to the senior management team regarding progress and roadblocks on daily basis.
-    </p>
-    </li>
-    <p>
-      <li> Provide a point-of-view to the business team on enhancement opportunities with Power BI on weekly basis.
-    </p>
-    </li>
-    <p>
-      <li> Organize daily analysis report on Turn-Around-Time (TAT) on the contractor’s actual output and targeted output on weekly basis.
-    </p>
-    </li>
-    <p>
-      <li> Analyze weekly and monthly report of all meter installation, presentation and documentation.
-    </p>
-    </li>
-    <p>
-      <li> Create contingency plans to manage crises and implement risk management controls and systems on daily basis.
-    </p>
-    </li>
-  </ul>
-  <br>
-  <h4>Ikeja Electric</h4>
-  <h4><em><strong>Revenue Assurance Analyst </strong></em></h4>
-  <h4>February 2017 – May 2018 (1 year 2months) Lagos, Nigeria. </h4>
-
-  <ul>
-    <p>
-      <li> Identifying, measuring, and evaluating diverse risks that are severe as threats against the installation project on daily basis.
-    </p>
-    </li>
-    <p>
-      <li> Evaluate the adequacy of quality assurance standards and analyze data to identify areas for improvement in the quality system on daily basis.
-    </p>
-    </li>
-    <p>
-      <li> Arrange reports to communicate outcomes of quality activities through collation and compilation of statistical quality data weekly
-    </p>
-    </li>
-    <p>
-      <li> Enable effective decision making by retrieving and aggregating data from multiple sources and compiling it into a digestible and actionable format on weekly basis.
-    </p>
-    </li>
-    <p>
-      <li> Evaluation of accepted and rejected meters and tracking on the database on weekly basis.
-    </p>
-    </li>
-    <p>
-      <li> Partner with operations/business teams to consult, generate and implement KPI’s, automated reporting/process solutions, and process improvements to meet business needs on monthly basis.
-    </p>
-    </li>
-    </li>
-    <p>
-      <li> Ensure that all escalations on CRM are resolved within SLA on daily basis.
-    </p>
-    </li>
-  </ul>
-  <br>
-
-  <h4>Sceptre Technologies Nigeria</h4>
-  <h4><em><strong>Logistics Analyst</strong></em></h4>
-  <h4>November 2015 - April 2017 (2 years 7 months)Lagos, Nigeria. </h4>
-
-  <ul>
-    <p>
-      <li> Create and maintain effective databases to manage and organize warehouse inventory daily
-    </p>
-    </li>
-    <p>
-    <p>
-      <li> Maintain a friendly and professional relationship with vendors while promoting company initiatives and values daily
-    </p>
-    </li>
-    <p>
-    <p>
-      <li> Established and maintained effective and efficient procurement and rendering processes, including cost control daily
-    </p>
-    </li>
-    <p>
-    <p>
-      <li> Organize and oversee inventory by keeping a detailed database of available inventory and expected usage per project using Microsoft Excel, CRM and others relevant to company processes daily
-    </p>
-    </li>
-    <p>
-
-  </ul>
-  <hr>
-  <h3>Education</h3>
-  <ul>
-    <li><strong>University of Lagos</strong></li>
-    <p>Masters Risk Management, Actuarial Science (2018 - 2021) </p>
-    <li><strong>Abia State University</strong></li>
-    <p>Bachelor’s Degree, Accounting (2010 - 2014) </p>
-    <p>B.Sc. Accounting (Upper Hons)</p>
-  </ul>
-  <hr>
-  <table cellspacing="10">
-    <thead>
-      <tr>
-        <th>Data</th>
-        <th>Work</th>
-      </tr>
-    </thead>
-    <tbody>
-
-    </tbody>
-    <tfoot>
-
-    </tfoot>
-
-    <tr>
-      <td>2018 - Present</td>
-      <td> Compliance Data Analyst at Ikeja Electric </td>
-
-    </tr>
-    <tr>
-      <td>2017 – 2018 </td>
-      <td> Revenue Assurance Analyst </td>
-    </tr>
-    <tr>
-      <td>2015 - 2017
-      </td>
-        <td>Sceptre Technologies Nigeria
-    </td>
-   </tr>
-  </table>
-  <hr>
-      <h3>Skills</h3>
-<table cellspacing="5">
-  <tr>
-    <td>
-      <table cellspacing="5">
-    <tr>
-      <td>Leadership</td>
-      <td>⭐⭐⭐⭐⭐</td>
-    </tr>
-    <tr>
-      <td>Power BI </td>
-      <td>⭐⭐⭐⭐⭐</td>
-    </tr>
-    <tr>
-      <td>Excel</td>
-      <td>⭐⭐⭐⭐⭐</td>
-    </tr>
-    <tr>
-      <td>SuiteCRM</td>
-      <td>⭐⭐⭐⭐</td>
-    </tr>
-
-      <td>Microsoft Suits</td>
-      <td>⭐⭐⭐⭐</td>
-    </tr>
-  </table>
-
-    </td>
-    <td>
-      <table cellspacing="5">
-    <tr>
-      <td>Leadership</td>
-      <td>⭐⭐⭐⭐⭐</td>
-    </tr>
-    <tr>
-      <td>Power BI </td>
-      <td>⭐⭐⭐⭐⭐</td>
-    </tr>
-    <tr>
-      <td>Excel</td>
-      <td>⭐⭐⭐⭐⭐</td>
-    </tr>
-    <tr>
-      <td>SuiteCRM</td>
-      <td>⭐⭐⭐⭐</td>
-    </tr>
-
-      <td>Microsoft Suits</td>
-      <td>⭐⭐⭐⭐</td>
-    </tr>
-  </table>
-    </td>
-  </tr>
-</table>
-
-  <br>
-  <hr>
-  <<a href="My Contact Details.html"> Contact Me </a>
+  <h1>I Love Bacon</h1>
+  <p>bacon, bacon, bacon, bacon, bacon, bacon</p>
+  <p>bacon, bacon, bacon, bacon, bacon, bacon</p>
+  <p>bacon, bacon, bacon, bacon, bacon, bacon</p>
+  <img src="https://emojipedia-us.s3.amazonaws.com/thumbs/240/apple/118/bacon_1f953.png" alt="bacon-img">
 </body>
-<br>
-<a href="https://www.linkedin.com/in/ifeanyi-alfred-nnah-mrm-619353101/details/recommendations/?detailScreenTabIndex=0">See Recommendation</a>
+
 </html>
